tooling/tree-sitter-satsuma/test/corpus/mappings.txt
================================================================================
Empty mapping block
================================================================================

mapping {
  source { customers }
  target { customers_v2 }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier))))))

================================================================================
Mapping with label
================================================================================

mapping crm_to_warehouse {
  source { crm_customers }
  target { dim_customers }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (block_label
      (identifier))
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier))))))

================================================================================
Mapping with metadata
================================================================================

mapping crm_to_warehouse (version 1) {
  source { crm_customers }
  target { dim_customers }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (block_label
      (identifier))
    (metadata_block
      (tag_with_value
        (identifier)
        (value_text
          (number_literal))))
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier))))))

================================================================================
Quoted mapping label
================================================================================

mapping `CRM to Warehouse` {
  source { crm_customers }
  target { dim_customers }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (block_label
      (backtick_name))
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier))))))

================================================================================
Source with multiple entries
================================================================================

mapping {
  source { crm_customers, billing_customers }
  target { dim_customers }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (mapping_body
      (source_block
        (source_ref
          (identifier))
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier))))))

================================================================================
Source with backtick references
================================================================================

mapping {
  source { `CRM_Customers`, `Billing_Customers` }
  target { `Dim_Customers` }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (mapping_body
      (source_block
        (source_ref
          (backtick_name))
        (source_ref
          (backtick_name)))
      (target_block
        (source_ref
          (backtick_name))))))

================================================================================
Source with NL string join description
================================================================================

mapping {
  source { crm_customers, "LEFT JOIN billing_accounts ON ..." }
  target { dim_customers }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (mapping_body
      (source_block
        (source_ref
          (identifier))
        (source_ref
          (nl_string)))
      (target_block
        (source_ref
          (identifier))))))

================================================================================
Mapping with note block
================================================================================

mapping crm_to_warehouse {
  source { crm_customers }
  target { dim_customers }
  note {
    "Maps CRM customers to the warehouse dimension table."
  }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (block_label
      (identifier))
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier)))
      (note_block
        (nl_string)))))

================================================================================
Mapping with simple direct arrow
================================================================================

mapping {
  source { customers }
  target { customers_v2 }
  customer_id -> customer_id
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier)))
      (map_arrow
        (src_path
          (field_path
            (identifier)))
        (tgt_path
          (field_path
            (identifier)))))))

================================================================================
Mapping with multiple arrows
================================================================================

mapping {
  source { customers }
  target { customers_v2 }
  id          -> customer_id
  name        -> full_name
  email_addr  -> email
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier)))
      (map_arrow
        (src_path
          (field_path
            (identifier)))
        (tgt_path
          (field_path
            (identifier))))
      (map_arrow
        (src_path
          (field_path
            (identifier)))
        (tgt_path
          (field_path
            (identifier))))
      (map_arrow
        (src_path
          (field_path
            (identifier)))
        (tgt_path
          (field_path
            (identifier)))))))

================================================================================
Target-only mapping (no source block)
================================================================================

mapping `computed values` {
  target { `computed_target` }
  -> id { uuid_v4 }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (block_label
      (backtick_name))
    (mapping_body
      (target_block
        (source_ref
          (backtick_name)))
      (computed_arrow
        (tgt_path
          (field_path
            (identifier)))
        (pipe_chain
          (pipe_step
            (pipe_text
              (identifier))))))))

================================================================================
Source-only mapping (no target block)
================================================================================

mapping `source audit` {
  source { `raw_events` }
  note { "Audit log, no target needed" }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (block_label
      (backtick_name))
    (mapping_body
      (source_block
        (source_ref
          (backtick_name)))
      (note_block
        (nl_string)))))

================================================================================
Arrows-only mapping (no source or target)
================================================================================

mapping {
  -> id { uuid_v4 }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (mapping_body
      (computed_arrow
        (tgt_path
          (field_path
            (identifier)))
        (pipe_chain
          (pipe_step
            (pipe_text
              (identifier))))))))
