tooling/tree-sitter-satsuma/test/corpus/metadata_values.txt
================================================================================
Numeric default value
================================================================================

schema customer {
  loyalty_points INT (default 0)
}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (schema_body
      (field_decl
        (field_name
          (identifier))
        (type_expr)
        (metadata_block
          (tag_with_value
            (identifier)
            (value_text
              (number_literal))))))))

================================================================================
Boolean default value
================================================================================

schema customer {
  is_deleted BOOLEAN (default false)
}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (schema_body
      (field_decl
        (field_name
          (identifier))
        (type_expr)
        (metadata_block
          (tag_with_value
            (identifier)
            (value_text
              (boolean_literal))))))))

================================================================================
Quoted default value
================================================================================

schema customer {
  currency CHAR(3) (default "USD")
}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (schema_body
      (field_decl
        (field_name
          (identifier))
        (type_expr)
        (metadata_block
          (tag_with_value
            (identifier)
            (value_text
              (nl_string))))))))

================================================================================
Dotted ref value
================================================================================

schema customer {
  address_id UUID (ref addresses.id)
}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (schema_body
      (field_decl
        (field_name
          (identifier))
        (type_expr)
        (metadata_block
          (tag_with_value
            (identifier)
            (value_text
              (dotted_name
                (identifier)
                (identifier)))))))))

================================================================================
Dotted format value
================================================================================

schema customer {
  phone VARCHAR(20) (format E.164)
}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (schema_body
      (field_decl
        (field_name
          (identifier))
        (type_expr)
        (metadata_block
          (tag_with_value
            (identifier)
            (value_text
              (dotted_name
                (identifier)
                (number_literal)))))))))

================================================================================
Tag number value
================================================================================

schema proto {
  event_id STRING (tag 1)
}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (schema_body
      (field_decl
        (field_name
          (identifier))
        (type_expr)
        (metadata_block
          (tag_with_value
            (identifier)
            (value_text
              (number_literal))))))))

================================================================================
Decimal metadata value
================================================================================

mapping `session aggregation` (error_threshold 0.02) {
  source { events }
  target { sessions }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (block_label
      (backtick_name))
    (metadata_block
      (tag_with_value
        (identifier)
        (value_text
          (number_literal))))
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier))))))

================================================================================
Namespace compound value
================================================================================

schema xml_order (
  format xml,
  namespace ord "http://example.com/order",
  namespace com "http://example.com/common"
) {}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (metadata_block
      (tag_with_value
        (identifier)
        (value_text
          (identifier)))
      (tag_with_value
        (identifier)
        (value_text
          (identifier)
          (nl_string)))
      (tag_with_value
        (identifier)
        (value_text
          (identifier)
          (nl_string))))))

================================================================================
Filter comparison value
================================================================================

schema edi_shipment {
  ShipmentRefs list_of record (filter SHPRFQUAL == "SRN") {
    SHIPREF CHAR(70)
  }
}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (schema_body
      (field_decl
        (field_name
          (identifier))
        (metadata_block
          (tag_with_value
            (identifier)
            (value_text
              (identifier)
              (nl_string))))
        (schema_body
          (field_decl
            (field_name
              (identifier))
            (type_expr)))))))

================================================================================
Source braced list value
================================================================================

metric churn_rate (
  source {fact_subscriptions, dim_customer},
  grain monthly,
  slice {segment, region}
) {}

--------------------------------------------------------------------------------

(source_file
  (metric_block
    (block_label
      (identifier))
    (metadata_block
      (tag_with_value
        (identifier)
        (value_text
          (identifier)
          (identifier)))
      (tag_with_value
        (identifier)
        (value_text
          (identifier)))
      (slice_body
        (identifier)
        (identifier)))))

================================================================================
Backtick metadata value for flatten
================================================================================

mapping `order lines` (flatten `Order.LineItems[]`) {
  source { commerce_order }
  target { order_lines }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (block_label
      (backtick_name))
    (metadata_block
      (tag_with_value
        (identifier)
        (value_text
          (backtick_name))))
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier))))))

================================================================================
Namespace-qualified dotted ref value
================================================================================

schema customer {
  instrument_isin STRING(12) (ref exchange_refs::instrument_ref.isin)
}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (schema_body
      (field_decl
        (field_name
          (identifier))
        (type_expr)
        (metadata_block
          (tag_with_value
            (identifier)
            (value_text
              (qualified_dotted_name
                (qualified_name
                  (identifier)
                  (identifier))
                (identifier)))))))))

================================================================================
Namespace-qualified dotted ref with multiple segments
================================================================================

schema orders {
  order_id UUID (ref oms::internal_order.details.order_id)
}

--------------------------------------------------------------------------------

(source_file
  (schema_block
    (block_label
      (identifier))
    (schema_body
      (field_decl
        (field_name
          (identifier))
        (type_expr)
        (metadata_block
          (tag_with_value
            (identifier)
            (value_text
              (qualified_dotted_name
                (qualified_name
                  (identifier)
                  (identifier))
                (identifier)
                (identifier)))))))))

